# rkllm-openai

./: .env.example  LICENSE  README.md  README.zh-CN.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
app/core/: config.py
app/libs/: rkllm.py  rknn.py  vision_encoder.py
app/routers/: chat_router.py
app/schemas/: chat_schema.py
app/services/: chat_service.py
app/utils/: logger.py  tools.py
docker/: Dockerfile  docker-compose.yml
