[project]
name = "rkllm-openai"
version = "0.1.0"
description = "An OpenAI-compatible API server for Rockchip RKLLM inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pylint>=4.0.4",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]
